force-app/main/default/objects/B25__Availability__c/B25__Availability__c.object-meta.xml
<CustomObject>
    <description>Resource availability</description>
    <label>Availability</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>