force-app/main/default/objects/B25__Availability__c/fields/B25__Contact__c.field-meta.xml
<CustomField>
    <fullName>B25__Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Contact record for which this Availability record is valid.</description>
    <inlineHelpText>L’enregistrement de contact pour lequel cet enregistrement de disponibilité est valable.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Availabilities</relationshipLabel>
    <relationshipName>Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>