force-app/main/default/objects/B25__Availability__c/fields/B25__Days__c.field-meta.xml
<CustomField>
    <fullName>B25__Days__c</fullName>
    <description>The days on which the Resource is available.</description>
    <inlineHelpText>Les jours pendant lesquels la ressource est disponible.</inlineHelpText>
    <label>Days</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>