force-app/main/default/objects/B25__Availability__c/fields/B25__End_Date__c.field-meta.xml
<CustomField>
    <fullName>B25__End_Date__c</fullName>
    <description>The end date of the (un)availability.</description>
    <inlineHelpText>La date de fin de l’(in)disponibilité.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>