force-app/main/default/objects/B25__Availability__c/fields/B25__End_Hour__c.field-meta.xml
<CustomField>
    <fullName>B25__End_Hour__c</fullName>
    <defaultValue>24</defaultValue>
    <description>At what hour does the Resource stop being available? Enter a value from 0 to 24.</description>
    <inlineHelpText>À quelle heure la ressource cesse-t-elle d’être disponible ? Saisissez une valeur comprise entre 0 et 24.</inlineHelpText>
    <label>End Hour</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>