force-app/main/default/objects/B25__Availability__c/fields/B25__Include_On_Scheduler__c.field-meta.xml
<CustomField>
    <fullName>B25__Include_On_Scheduler__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this availability will be shown on the scheduler.</description>
    <inlineHelpText>Lorsque cette option est cochée, cette disponibilité sera affichée sur le planificateur.</inlineHelpText>
    <label>Include On Scheduler</label>
    <type>Checkbox</type>
</CustomField>