force-app/main/default/objects/B25__Availability__c/fields/B25__Resource2__c.field-meta.xml
<CustomField>
    <fullName>B25__Resource2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Resource record for which this Availability record is valid.</description>
    <inlineHelpText>L’enregistrement de la ressource pour lequel cet enregistrement de disponibilité est valable.</inlineHelpText>
    <label>Resource</label>
    <referenceTo>B25__Resource__c</referenceTo>
    <relationshipLabel>Availabilities</relationshipLabel>
    <relationshipName>Availabilities2</relationshipName>
    <type>Lookup</type>
</CustomField>