force-app/main/default/objects/B25__Availability__c/fields/B25__Staff__c.field-meta.xml
<CustomField>
    <fullName>B25__Staff__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Staff record for which this Availability record is valid.</description>
    <inlineHelpText>L’enregistrement de personnel pour lequel cet enregistrement de disponibilité est valable.</inlineHelpText>
    <label>Staff</label>
    <referenceTo>B25__Staff__c</referenceTo>
    <relationshipLabel>Availabilities</relationshipLabel>
    <relationshipName>Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>