force-app/main/default/objects/B25__Availability__c/fields/B25__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>B25__Start_Date__c</fullName>
    <description>The start date of the (un)availability.</description>
    <inlineHelpText>La date de début de l’(in)disponibilité.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>