force-app/main/default/objects/B25__Availability__c/fields/B25__Start_Hour__c.field-meta.xml
<CustomField>
    <fullName>B25__Start_Hour__c</fullName>
    <defaultValue>0</defaultValue>
    <description>At what hour does the Resource become available? Enter a value from 0 to 23.</description>
    <inlineHelpText>À quelle heure la ressource devient-elle disponible ? Saisissez une valeur comprise entre 0 et 23.</inlineHelpText>
    <label>Start Hour</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>