force-app/main/default/objects/B25__Availability__c/fields/B25__Start_Minute__c.field-meta.xml
<CustomField>
    <fullName>B25__Start_Minute__c</fullName>
    <defaultValue>0</defaultValue>
    <description>At what minute of the first hour does the Resource become available? Enter a value from 0 to 59.</description>
    <inlineHelpText>À quelle minute de la première heure la ressource devient-elle disponible ? Saisissez une valeur comprise entre 0 et 59.</inlineHelpText>
    <label>Start Minute</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>