force-app/main/default/objects/B25__Availability__c/fields/B25__Unavailability__c.field-meta.xml
<CustomField>
    <fullName>B25__Unavailability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to make the Resource unavailable.</description>
    <inlineHelpText>Cochez cette case pour rendre la ressource indisponible.</inlineHelpText>
    <label>Unavailability</label>
    <type>Checkbox</type>
</CustomField>